<resources>
    <string name="app_name">WantToHelp</string>
    <string name="app_title">Хочу помочь</string>
    <string name="loading">Загрузка…</string>
    <string name="content_description_edit">EditProfile</string>
    <string name="edit">Edit</string>
    <string name="friends_title">Ваши друзья</string>
    <string name="logout_button">Выйти из аккаунта</string>
    <string name="profile_name">Константинов Денис</string>
    <string name="profile_title_birthday">Дата рождения</string>
    <string name="profile_birthday">01 февраля 1980</string>
    <string name="profile_activity_sphere_title">Сфера деятельности</string>
    <string name="profile_activity_sphere">Хирургия, травмотология</string>
    <string name="profile_push">Получать Push-уведомления</string>
    <string name="profile_description_friend_avatar">profile_descr_friend_avatar</string>
    <string name="profile_avatar">profile_avatar</string>
    <string name="profile_friend_name_1">Дмитрий Валерьевич</string>
    <string name="profile_friend_name_2">Евгений Александров</string>
    <string name="profile_friend_name_3">Виктор Кузнецов</string>
    <string name="splash_description_logo">description_logo</string>
    <string name="splash_description_simbirsoft">description_simbirsoft</string>
    <string name="nav_news">Новости</string>
    <string name="nav_search">Поиск</string>
    <string name="nav_help">Помочь</string>
    <string name="nav_history">История</string>
    <string name="nav_profile">Профиль</string>
    <string name="arrow_right">arrow_right</string>
    <string name="search_info_placeholder">Ключевые слова: мастер-класс, помощь\nРезультаты поиска: 109 мероприятий</string>
    <string name="dialog_item_icon">dialog_item_icon</string>
    <string name="category">category</string>
    <string name="back_description">Назад</string>
    <string name="change_camera_description">Менять камеру</string>
    <string name="btn_take_photo">Сделать фото</string>
    <string name="choose_category">Выберите категорию помощи</string>
    <string name="take_photo_dialog">Выбрать фото</string>
    <string name="make_photo_dialog">Сделать снимок</string>
    <string name="delete">Удалить</string>
    <string name="search_tip1">Напишите в строке поиска название\n мероприятия или ключевые слова.</string>
    <string name="search_tip2">Например, мастер-класс, помощь</string>
    <string name="search_tip3">Напишите в строке поиска название\n организации или ключевые слова.</string>
    <string name="search_tip4">Например, фонд, компания</string>
    <string name="search_icon">search_icon</string>
    <string name="search_title">Поиск</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>