<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_description"
        android:elevation="16dp"
        android:scaleType="fitCenter"
        android:layout_gravity="start"
        android:src="@drawable/ic_arrow_back" />

    <ImageButton
        android:id="@+id/ib_flip_camera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/change_camera_description"
        android:elevation="16dp"
        android:scaleType="fitCenter"
        android:layout_gravity="end"
        android:src="@drawable/ic_flip_camera" />

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:paddingVertical="16dp"
        android:text="@string/btn_take_photo"
        android:layout_gravity="bottom" />
</FrameLayout>