<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:textAlignment="center"
            app:collapsedTitleGravity="center"
            app:collapsedTitleTextColor="@color/white"
            app:contentScrim="@color/base_green"
            app:layout_scrollFlags="snap|scroll|enterAlways|enterAlwaysCollapsed"
            app:title="Профиль">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="330dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/profile_avatar"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/image_man"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginHorizontal="16dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/menu_top_app_bar" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <!--Name-->
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/profile_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toTopOf="parent" />
            <!--Birthday-->
            <TextView
                android:id="@+id/tv_birthday_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profile_title_birthday"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_birthday"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_birthday_title" />

            <!--Sphere of activity-->
            <TextView
                android:id="@+id/tv_activity_sphere_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profile_activity_sphere_title"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_birthday" />

            <TextView
                android:id="@+id/tv_activity_sphere"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_activity_sphere"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_activity_sphere_title" />

            <!--Push-->
            <TextView
                android:id="@+id/tv_getPushNotifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="28dp"
                android:text="@string/profile_push"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_activity_sphere" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/push_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="@+id/tv_getPushNotifications"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_getPushNotifications"
                app:layout_constraintTop_toTopOf="@id/tv_getPushNotifications" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="18dp"
                app:dividerColor="@color/cool_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_getPushNotifications" />

            <TextView
                android:id="@+id/tv_friends_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/friends_title"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/divider1" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/friend_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_friends_title">

                <ImageView
                    android:id="@+id/iv_friend_1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/profile_description_friend_avatar"
                    android:src="@drawable/avatar_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_friend_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/profile_friend_name_1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_friend_1"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/friend_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/friend_1">

                <ImageView
                    android:id="@+id/iv_friend_2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/profile_description_friend_avatar"
                    android:src="@drawable/avatar_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_friend_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/profile_friend_name_2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_friend_2"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/friend_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/friend_2">

                <ImageView
                    android:id="@+id/iv_friend_3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/profile_description_friend_avatar"
                    android:src="@drawable/avatar_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_friend_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/profile_friend_name_3"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_friend_3"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="18dp"
                app:dividerColor="@color/cool_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/friend_3" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/logout_button"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toTopOf="@id/divider2" />

            <Space
                android:id="@+id/spacer"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_logout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>